Like count on mobile fixed

--- a/styles/objects/_post.scss
+++ b/styles/objects/_post.scss
@@ -56,6 +56,10 @@
 
       @include mobile-screen {
         display: none;
+
+        &--active{
+          display: block;
+        }
       }
     }
 
